--- a/Web/css/overview.css
+++ b/Web/css/overview.css
@@ -180,21 +180,22 @@ img.icon
 	clear: both;
 }
 
-#info-container .data-table table
-{
-	border: none;
-	font-family: monospace;
-	width: 100%;
-}
-
 #info-container .data-table h3
 {
 	font-weight: bold;
 	padding-top: 20px;
 }
 
+#info-container .data-table table
+{
+	border-collapse: collapse;
+	font-family: monospace;
+	width: 100%;
+}
+
 #info-container .data-table table td
 {
+	border: 2px solid white;
 	padding: 5px 15px;
 }
 
@@ -203,11 +204,32 @@ img.icon
 	background-color: #E8E8E8;
 }
 
+#info-container .data-table table tbody tr.warn,
+.warn
+{
+	background-color: #FFFF99;
+}
+
 #info-container .data-table table tbody tr.warn td:first-child
 {
 	background-repeat: no-repeat;
 	background-position: right 5px center;
 	background-image: url("../img/alert-16.png");
+}
+
+@keyframes bg-highlight
+{
+	  0% { background-color: inherit; }
+	 25% { background-color: #FF9999; }
+	 50% { background-color: inherit; }
+	100% { background-color: inherit; }
+}
+
+#info-container .data-table table tbody tr.highlight td:first-child
+{
+	animation-name: bg-highlight;
+	animation-duration: 1s;
+	animation-iteration-count: 5;
 }
 
 #info-container .data-table table thead td,
@@ -229,13 +251,6 @@ img.icon
 #info-container .data-table table .col-hdr
 {
 	background-color: black !important;
-}
-
-#info-container .data-table table
-{
-	border: none;
-	font-family: monospace;
-	width: 100%;
 }
 
 .code-notes pre,
@@ -290,9 +305,20 @@ img.icon
 	border-color: transparent transparent transparent black;
 }
 
-.feedback ul li
+ul li
 {
 	line-height: 150%;
+}
+
+.feedback .warn
+{
+	border-bottom: 1px dotted black;
+}
+
+span[title]
+{
+	cursor: help;
+	border-bottom: 1px dotted black;
 }
 
 code
@@ -306,11 +332,6 @@ pre code
 {
 	padding: 10px;
 	display: block;
-}
-
-.warn
-{
-	background-color: #FFFF99 !important;
 }
 
 .fade
