--- a/Web/css/overview.css
+++ b/Web/css/overview.css
@@ -26,7 +26,7 @@ div#container
 	height: 100%;
 
 	overflow-y: scroll;
-	overflow-x: hidden;
+	overflow-x: clip;
 }
 
 footer
@@ -147,6 +147,7 @@ img.icon
 	border: 1px solid black;
 	margin-right: 20px;
 	float: left;
+	display: block;
 }
 
 .hidden
@@ -173,6 +174,11 @@ img.icon
 #info-container .main-header + div
 {
 	clear: both;
+}
+
+#info-container .main-header + div
+{
+	padding-top: 5px;
 }
 
 #info-container .data-table h3
@@ -314,6 +320,12 @@ span[title]
 {
 	cursor: help;
 	border-bottom: 1px dotted black;
+}
+
+div.chart
+{
+	display: inline-block;
+	width: 500px;
 }
 
 code
