AutoCR: reworked status icon system

--- a/AutoCR/css/overview.css
+++ b/AutoCR/css/overview.css
@@ -87,16 +87,16 @@ footer
 #asset-list tbody tr.pass td.asset-name
 { background-image: url("../img/approval-16.png"); }
 
-#asset-list tbody tr.fail
-{
-	background-color: #FFAAAA;
-}
+#asset-list tbody tr.warn td.asset-name
+{ background-image: url("../img/alert-16.png"); }
 
 #asset-list tbody tr.fail td.asset-name
 { background-image: url("../img/error-5-16.png"); }
 
-#asset-list tbody tr.info td.asset-name
-{ /* background-image: url("../img/alert-16.png"); */ }
+#asset-list tbody tr.fail
+{
+	background-color: #FFAAAA;
+}
 
 #asset-list tbody tr:hover
 {
