AutoCR: fix delta/prior warnings, add note filter

--- a/AutoCR/css/overview.css
+++ b/AutoCR/css/overview.css
@@ -374,3 +374,4 @@ pre code
 .float-right { float: right; }
 .clear { clear: both; }
 .fade { opacity: 75%; }
+.list-inside li { list-style-position: inside; }
